--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,6 @@
     "editor.fontSize": 14,
     "editor.fontLigatures": false,
     "editor.fontWeight": "500",
-    "editor.fontVariations": false
+    "editor.fontVariations": false,
+    "editor.formatOnSave": true
 }
